# steins-feed-mono

./: .gitignore  README.md  pyproject.toml
steins-feed-api/: Makefile  README.md  logging.toml  pyproject.toml
steins-feed-api/steins_feed_api/: __init__.py  auth.py  db.py  pubsub.py  util.py
steins-feed-api/steins_feed_api/routers/: feeds.py  items.py
steins-feed-config/: .coveragerc  README.md  feeds.xml  pyproject.toml
steins-feed-config/scripts/: first_steps.py  first_steps_logging.toml
steins-feed-config/steins_feed_config/: __init__.py  db.py  feeds.py
steins-feed-config/steins_feed_config/feeds.d/: magazines.xml  news.xml  science.xml  tech.xml
steins-feed-config/tests/: test_feeds.py
steins-feed-etl/: .coveragerc  Makefile  README.md  pyproject.toml
steins-feed-etl/scripts/: dev.py  dev_logging.toml  first_steps.py  prod.py  prod_logging.toml
steins-feed-etl/steins_feed_etl/: __init__.py  items.py  util.py
steins-feed-etl/tests/: test_items.py
steins-feed-logging/: README.md  pyproject.toml
steins-feed-logging/steins_feed_logging/: __init__.py
steins-feed-magic/: .coveragerc  README.md  pyproject.toml
steins-feed-magic/scripts/: main.py
steins-feed-magic/steins_feed_magic/: __init__.py  classify.py  db.py  feature.py  io.py  measure.py  parse.py  sample.py  stem.py  util.py
steins-feed-magic/tests/: test_classify.py  test_db.py  test_io.py  test_measure.py  test_parse.py  test_sample.py  test_stem.py  test_util.py
steins-feed-math/: README.md  pyproject.toml
steins-feed-math/steins_feed_math/statistics/: __init__.py
steins-feed-model/: .coveragerc  README.md  pyproject.toml
steins-feed-model/scripts/: first_steps.py
steins-feed-model/steins_feed_model/: __init__.py  base.py  feeds.py  items.py  types.py  users.py
steins-feed-model/steins_feed_model/schema/: __init__.py  base.py  feeds.py  items.py  types.py  users.py
steins-feed-model/tests/: test_create_schema.py
steins-feed-tasks/: Makefile  README.md  logging.toml  pyproject.toml
steins-feed-tasks/steins_feed_tasks/: __init__.py  app.py  db.py  dummy.py  etl.py  log.py  magic.py
steins-feed-ui/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
steins-feed-ui-vite/: index.html  package-lock.json  package.json
steins-feed-ui-vite/src/: App.tsx  actions.ts  auth.ts  main.tsx  util.ts
steins-feed-ui-vite/src/client/: sdk.gen.ts
steins-feed-ui-vite/src/components/: actions.ts  article.tsx  magic_button.tsx  navigation.tsx  sidenav.tsx  topnav.tsx
steins-feed-ui-vite/src/pages/feed/: display.tsx  feed.tsx  index.tsx  tags.tsx
steins-feed-ui-vite/src/pages/home/: article.module.css  article.tsx  index.tsx  like_button.tsx  navigation.tsx  topnav.tsx  util.ts
steins-feed-ui-vite/src/pages/login/: index.tsx
steins-feed-ui/__tests__/: util.parse.test.ts  util.test.ts
steins-feed-ui/app/: actions.ts  actions.tsx  auth.ts  auth.tsx  components.module.css  components.tsx  layout.tsx  navigation.tsx  page.tsx  util.ts
steins-feed-ui/app/feed/[feed_id]/: actions.ts  components.tsx  page.tsx  util.ts
steins-feed-ui/app/login/: actions.ts  actions.tsx  components.tsx  page.tsx
steins-feed-ui/client/: sdk.gen.ts  types.gen.ts
steins-feed-ui/src/: graph.ts  main.tsx  metrics.ts
steins-feed-ui/src/client/: sdk.gen.ts  types.gen.ts
steins-feed-ui/src/pages/feed/: components.tsx  display.tsx  index.tsx  util.ts
steins-feed-ui/src/pages/home/: article.tsx  index.tsx  magic_button.tsx  sidenav.tsx  topnav.tsx  worker.ts
steins-feed-ui/src/pages/login/: index.tsx  modal.tsx
steins-feed-ui/util/: index.ts  parse.ts
