[tool.poetry]
name = "steins-feed-mono"
version = "0.1.0"
description = "Stein's Feed"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
steins-feed-api = {path = "steins-feed-api", develop = true}
steins-feed-config = {path = "steins-feed-config", develop = true}
steins-feed-etl = {path = "steins-feed-etl", develop = true}
steins-feed-logging = {path = "steins-feed-logging", develop = true}
steins-feed-magic = {path = "steins-feed-magic", develop = true}
steins-feed-model = {path = "steins-feed-model", develop = true}
steins-feed-tasks = {path = "steins-feed-tasks", extras = ["etl", "magic"], develop = true}

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
