[tool.poetry]
name = "steins-feed-api"
version = "0.1.0"
description = "Stein's feed -- API"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
python-dotenv = "^1.0.1"
steins-feed-logging = {path = "../steins-feed-logging", develop = true}
steins-feed-model = {path = "../steins-feed-model", develop = true}

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
