[tool.poetry]
name = "steins-feed-config"
version = "0.1.0"
description = "Stein's feed -- configuration"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
lxml = "^5.3.0"
steins-feed-model = {path = "../steins-feed-model"}

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"
coverage = "^7.6.9"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
