[tool.poetry]
name = "steins-feed-etl"
version = "0.1.0"
description = "Stein's feed -- ETL"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11.11"
feedparser = "^6.0.11"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
