[tool.poetry]
name = "steins-feed-etl"
version = "0.1.0"
description = "Stein's feed -- ETL"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.11.11"
feedparser = "^6.0.11"
steins-feed-logging = {path = "../steins-feed-logging", develop=true}
steins-feed-model = {path = "../steins-feed-model", develop=true}
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"
coverage = "^7.6.9"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
python-dotenv = "^1.0.1"
steins-feed-config = {path = "../steins-feed-config", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
