[tool.poetry]
name = "steins-feed-model"
version = "0.1.0"
description = "Stein's feed -- model"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"
coverage = "^7.6.9"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
