[tool.poetry]
name = "steins-feed-tasks"
version = "0.1.0"
description = "Stein's feed -- tasks"
authors = ["Hans Yu <hans.yu@outlook.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
celery = {extras = ["redis"], version = "^5.4.0"}
python-dotenv = "^1.0.1"
steins-feed-etl = {path = "../steins-feed-etl", optional = true, develop = true}
steins-feed-magic = {path = "../steins-feed-magic", optional = true, develop = true}

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.5"

[tool.poetry.extras]
etl = ["steins-feed-etl"]
magic = ["steins-feed-magic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
